add-fixed the content

--- a/LabB52-Najlla -2021000694)/Najla Almuhannadi -Assgment 1/Css/style.css
+++ b/LabB52-Najlla -2021000694)/Najla Almuhannadi -Assgment 1/Css/style.css
@@ -9,7 +9,8 @@
 body{
   width: 100%;
   height: 100%;
-  background: #fff  ;
+    background-image: url("../images/37diamond.jpeg");
+    /*background: #fff  ;*/
   display: flex;
 }
 .container{
